# topshift-trend

./: .env.example  .gitignore  Containerfile  LICENSE  Makefile  NOTES.md  README.md  compose.yaml  pyproject.toml
bot/: __init__.py  config.py  main.py  notifier.py  scraper.py  store.py
tests/: __init__.py  test_config.py  test_main.py  test_notifier.py  test_scraper.py  test_store.py
